# maal_org_new

./: .gitignore  manage.py  pyproject.toml
kayan/: settings.py  wsgi.py
maal_organization/: asgi.py  settings.py  urls.py
main/: admin.py  context_processors.py  models.py  urls.py  views.py
static/css/: styles.css
templates/: base.html
templates/pages/: about.html  blog_detail.html  blogs.html  contact.html  home.html  project_detail.html  project_list.html
templates/partials/: _footer.html  _go_top.html  _header.html  _mobile_menu.html  announcement_bar.html
templates/partials/home/: _blogs.html  _contact.html  _gallery.html  _info.html  _projects.html  _slider.html
